# FLIR_control

./: .gitignore  MULTICAM_EXTENSION_PLAN.md  README.md  requirements.txt
.omx/: metrics.json
.omx/logs/: turns-2026-05-08.jsonl  turns-2026-05-09.jsonl  turns-2026-05-11.jsonl  turns-2026-05-12.jsonl
.omx/state/: hud-state.json  notify-hook-state.json  skill-active-state.json  tmux-hook-state.json
calibration/: flir_camera_extrinsics.yaml  flir_camera_info.yaml
scripts/: bag_to_nuscenes.py  multicam_param_set.py  serve_nuscenes_images.py  setup_camera_nic.bash  setup_flir_env.bash
src/flir_camera_calibration/: CMakeLists.txt  README.md  package.xml
src/flir_camera_calibration/config/: calibration.yaml  extrinsic_calibration.yaml
src/flir_camera_calibration/launch/: calibration.launch.py  multicam_calibration.launch.py  multicam_extrinsic_calibration.launch.py  noetic_calibration.launch  noetic_multicam_calibration.launch  noetic_multicam_extrinsic_calibration.launch
src/flir_camera_calibration/scripts/: noetic_extrinsic_calibration_node.py  noetic_intrinsic_calibration_node.py
src/flir_camera_calibration/src/: flir_camera_calibration_node.cpp  flir_camera_extrinsic_calibration_node.cpp
src/flir_camera_undistort_viewer/: CMakeLists.txt  README.md  package.xml
src/flir_camera_undistort_viewer/launch/: multicam_undistort_viewer.launch.py  noetic_undistort_viewer.launch
src/flir_camera_undistort_viewer/src/noetic/: flir_camera_undistort_viewer_noetic_node.cpp
src/flir_spinnaker_camera/: CMakeLists.txt  README.md  package.xml
src/flir_spinnaker_camera/config/: flir_camera.yaml  multicam_cameras.yaml
src/flir_spinnaker_camera/launch/: flir_camera.launch.py  multicam.launch.py  noetic_extrinsics_tf.launch  noetic_flir_camera.launch  noetic_multicam.launch
src/flir_spinnaker_camera/scripts/: ptp4l_roslaunch_wrapper.bash
src/flir_spinnaker_camera/src/: flir_camera_extrinsics_tf_node.cpp  flir_multicam_inventory_tool.cpp  flir_spinnaker_camera_node.cpp
src/flir_spinnaker_camera/src/noetic/: flir_camera_extrinsics_tf_noetic_node.cpp  flir_spinnaker_camera_noetic_node.cpp
src/flir_spinnaker_camera/srv/: SetCameraControl.srv
