<?xml version="1.0"?>
<package format="3">
  <name>flir_camera_calibration</name>
  <version>0.1.0</version>
  <description>Interactive chessboard calibration tools for FLIR compressed RGB images.</description>
  <maintainer email="codex@example.com">Codex</maintainer>
  <license>MIT</license>

  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>

  <depend>libopencv-dev</depend>
  <depend condition="$ROS_VERSION == 2">rclcpp</depend>
  <depend condition="$ROS_VERSION == 1">roscpp</depend>
  <exec_depend condition="$ROS_VERSION == 1">rospy</exec_depend>
  <depend>sensor_msgs</depend>

  <exec_depend condition="$ROS_VERSION == 2">launch</exec_depend>
  <exec_depend condition="$ROS_VERSION == 2">launch_ros</exec_depend>
  <exec_depend>python3-yaml</exec_depend>

  <test_depend condition="$ROS_VERSION == 2">ament_lint_auto</test_depend>
  <test_depend condition="$ROS_VERSION == 2">ament_lint_common</test_depend>

  <export>
    <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
  </export>
</package>
