<?xml version="1.0"?>
<package format="3">
  <name>flir_spinnaker_camera</name>
  <version>0.1.0</version>
  <description>ROS package for publishing FLIR raw and RGB images with the Spinnaker SDK.</description>
  <maintainer email="codex@example.com">Codex</maintainer>
  <license>MIT</license>

  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 2">rosidl_default_generators</buildtool_depend>

  <build_depend condition="$ROS_VERSION == 1">message_generation</build_depend>
  <depend>libopencv-dev</depend>
  <depend>geometry_msgs</depend>
  <depend condition="$ROS_VERSION == 2">rclcpp</depend>
  <depend condition="$ROS_VERSION == 1">roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2_ros</depend>

  <exec_depend condition="$ROS_VERSION == 2">launch</exec_depend>
  <exec_depend condition="$ROS_VERSION == 2">launch_ros</exec_depend>
  <exec_depend condition="$ROS_VERSION == 1">message_runtime</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend condition="$ROS_VERSION == 2">rosidl_default_runtime</exec_depend>

  <member_of_group condition="$ROS_VERSION == 2">rosidl_interface_packages</member_of_group>

  <test_depend condition="$ROS_VERSION == 2">ament_lint_auto</test_depend>
  <test_depend condition="$ROS_VERSION == 2">ament_lint_common</test_depend>

  <export>
    <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
  </export>
</package>
